--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@ img {
     width: 787px;
     margin: 0 auto;
     margin-top: 80px;
+    margin-bottom: 20px;
 }
 .scroll {
     overflow-y: auto;
